tests/e2e/no_effectless_expr2.error
Error: syntax error in story at line 4, column 1

4|    foo().a
      ^^^^^^^

E0161: Effectless expressions without assignment not allowed.
