tests/e2e/no_effectless_expr2.story
function foo
    a = 1

foo().a
